Update configuration for Render deployment

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,12 +21,12 @@ test:
   database: storage/test.sqlite3
 
 
-# Store production database in the storage/ directory, which by default
-# is mounted as a persistent Docker volume in config/deploy.yml.
+# Production configuration optimized for Render and other cloud platforms
 production:
   primary:
     <<: *default
-    database: storage/production.sqlite3
+    database: <%= ENV.fetch('DATABASE_URL', 'storage/production.sqlite3').include?('postgres') ? ENV.fetch('DATABASE_URL') : 'storage/production.sqlite3' %>
+    adapter: <%= ENV.fetch('DATABASE_URL', '').include?('postgres') ? 'postgresql' : 'sqlite3' %>
   cache:
     <<: *default
     database: storage/production_cache.sqlite3
