--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: searchbox-backend
     env: ruby
-    buildCommand: bundle install && bundle exec rake assets:precompile && bundle exec rake assets:clean && bundle exec rake render:setup_db
+    buildCommand: bundle install && bundle exec rake assets:precompile && bundle exec rake render:setup_db
     startCommand: bundle exec rails server -p $PORT -e production
     healthCheckPath: /up
     envVars:
