Add more articles to seeds and improve deployment process

--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,10 @@ services:
           type: redis
           name: searchbox-redis
           property: connectionString
+      - key: RAILS_ENV
+        value: production
+      - key: RAILS_LOG_LEVEL
+        value: info
 
   - type: redis
     name: searchbox-redis
