--- a/render.yaml
+++ b/render.yaml
@@ -2,21 +2,24 @@ services:
   - type: web
     name: searchbox-backend
     env: ruby
-    buildCommand: bundle install && bundle exec rake assets:precompile && bundle exec rake render:setup_db
-    startCommand: bundle exec rails server -p $PORT -e production
-    healthCheckPath: /up
+    buildCommand: bundle install && bundle exec rails assets:precompile && bundle exec rails db:migrate && bundle exec rails render:setup_db
+    startCommand: bundle exec rails server -b 0.0.0.0
     envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: searchbox-instance
+          property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
-      - key: REDIS_URL
-        fromService:
-          type: redis
-          name: searchbox-redis
-          property: connectionString
       - key: RAILS_ENV
         value: production
-      - key: RAILS_LOG_LEVEL
-        value: info
+      - key: RAILS_LOG_TO_STDOUT
+        value: true
+
+databases:
+  - name: searchbox-instance
+    databaseName: searchbox_db
+    user: searchbox_user
 
   - type: redis
     name: searchbox-redis
