--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: searchbox-backend
     env: ruby
-    buildCommand: bundle install && bundle exec rails assets:precompile
-    startCommand: bin/render-deploy
+    buildCommand: bundle install && bundle exec rails assets:precompile && bundle exec rails db:migrate && bundle exec rails render:setup_db
+    startCommand: bundle exec rails server -b 0.0.0.0
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -15,8 +15,6 @@ services:
         value: production
       - key: RAILS_LOG_TO_STDOUT
         value: true
-      - key: DISABLE_DATABASE_ENVIRONMENT_CHECK
-        value: 1
 
 databases:
   - name: searchbox-instance
