--- a/config/database.yml
+++ b/config/database.yml
@@ -20,12 +20,5 @@ test:
 
 # Production configuration optimized for Render PostgreSQL
 production:
-  adapter: postgresql
-  encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  url: <%= ENV['DATABASE_URL'] %>
-  database: <%= ENV['POSTGRES_DB'] %>
-  username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV['POSTGRES_PASSWORD'] %>
-  host: <%= ENV['POSTGRES_HOST'] %>
-  port: <%= ENV['POSTGRES_PORT'] %>
+  <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
